maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:9: error: illegal start of simple expression
      case 1 => if(!estFaceMur());avance()
                                 ^